<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sports Anytime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Entrar</string>

    <string-array name="tiposKey">
        <item>campo</item>
        <item>society</item>
        <item>futsal</item>
    </string-array>
    <string-array name="tiposValue">
        <item>Campo</item>
        <item>Society</item>
        <item>Futsal</item>
    </string-array>
    <string-array name="posicoesKey">
        <item>gol</item>
        <item>zag</item>
        <item>ld</item>
        <item>le</item>
        <item>vol</item>
        <item>mei</item>
        <item>ata</item>
        <item>fixo</item>
        <item>ala</item>
        <item>pivo</item>
    </string-array>
    <string-array name="posicoesValue">
        <item>Goleiro</item>
        <item>Zagueiro</item>
        <item>Lateral-direito</item>
        <item>Lateral-esquerdo</item>
        <item>Volante</item>
        <item>Meio-campo</item>
        <item>Atacante</item>
        <item>Fixo</item>
        <item>Ala</item>
        <item>Pivô</item>
    </string-array>

    <string name="title_main_activity">Login</string>
    <string name="title_bem_vindo_activity">Bem Vindo</string>
    <string name="title_activity_home_time">Jogadores próximos a você</string>
    <string name="title_activity_home_jogador">Jogos próximos a você</string>
    <string name="title_activity_detalhes_jogo">Detalhes do jogo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_confirmacao">Confirmação</string>
    <string name="title_activity_review">Avaliação</string>
    <string name="title_activity_cadastro_jogo">Novo Jogo</string>
    <string name="title_activity_detalhes_jogador">Detalhes</string>
    <string name="title_activity_filtro">Filtro</string>
    <string name="title_activity_jogadores_time">Jogadores convidados</string>
    <string name="title_activity_teste_maps">Teste Google Maps</string>

    <string name="menu_home_time_menu_filtrar">Filtrar</string>
    <string name="menu_home_jogador_menu_filtrar">Filtrar</string>
    <string name="menu_home_time_menu_limpar">Limpar filtros</string>
    <string name="menu_home_time_jogadores_convidados">Jogadores convidados</string>

    <string name="e_mail">E-mail</string>
    <string name="main_title">Entrar</string>
    <string name="main_btn_register_player">Sou jogador</string>
    <string name="main_btn_register_team">Sou um Time</string>
    <string name="main_lbl_nao_tenho_cadastro">Não tenho cadastro…</string>
    <string name="cadastro_time_title">Sou um time</string>
    <string name="lbl_team_nome">Nome</string>
    <string name="lbl_team_tipo_de_jogo">Tipo de jogo</string>
    <string name="lbl_team_endereco">Endereço</string>
    <string name="lbl_team_cidade">Cidade</string>
    <string name="lbl_team_estado">Estado</string>
    <string name="lbl_player_title">Sou jogador</string>
    <string name="lbl_player_posicao">Posição</string>

    <string name="detalhes_jogo_imagem_time_description">Imagem do time</string>
    <string name="detalhes_jogo_quero_jogar">Quero jogar!</string>

    <string name="detalhes_jogador_imagem_jogador_description">Imagem do Jogador</string>
    <string name="detalhes_jogador_joga_pra_gente">Joga pra gente!</string>
    <string name="detalhes_jogador_title_avaliacoes">Avaliações</string>
    <string name="review_btn_enviar">Enviar</string>

    <string name="confirmacao_title">Confirmado!</string>
    <string name="lbl_telefone_jogador">Telefone</string>
    <string name="lbl_e_mail_jogador">E-mail</string>
    <string name="lbl_senha_jogador">Senha</string>
    <string name="lbl_e_mail_time">E-mail</string>
    <string name="lbl_senha_time">Senha</string>
    <string name="lbl_telefone_time">Telefone</string>

    <string name="novo_jogo_data">Data</string>
    <string name="novo_jogo_posicoes_disponiveis">Posições</string>
    <string name="novo_jogo_btn_salvar">Salvar</string>
    <string name="home_time_btn_novo_jogo">Novo jogo</string>
    <string name="confirmacao_subtitulo">Você receberá um e-mail com a confirmação</string>
    <string name="detalhes_jogo_avaliar">Avaliar</string>
    <string name="detalhes_jogador_avaliar">Avaliar</string>
    <string name="filtrar_gol_label">Goleiros</string>
    <string name="filtrar_ld_label">Laterais-direito</string>
    <string name="filtrar_le_label">Laterais-esquerdo</string>
    <string name="filtrar_zag_label">Zagueiros</string>
    <string name="filtrar_vol_label">Volantes</string>
    <string name="filtrar_mei_label">Meios-campos</string>
    <string name="filtrar_ata_label">Atacantes</string>
    <string name="filtrar_fixo_label">Fixos</string>
    <string name="filtrar_ala_label">Alas</string>
    <string name="filtrar_pivo_label">Pivôs</string>
    <string name="filtrar_btn_filtrar">Filtrar</string>
</resources>