<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#8bc34a">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">
        <TextView
            android:text="@string/main_title"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/tLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/senha"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/tSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="#0a8f08"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#527030">

        <TextView
            android:id="@+id/main_lbl_nao_tenho_cadastro"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_lbl_nao_tenho_cadastro"
            android:textColor="#FFF"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0"
            android:layout_alignParentStart="true"
            android:layout_below="@id/main_lbl_nao_tenho_cadastro">
            <Button
                android:id="@+id/btnCadJogador"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_btn_register_player"
                android:background="#527030"
                android:textColor="#FFF"/>

            <Button
                android:id="@+id/btnCadTime"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/main_btn_register_team"
                android:background="#527030"
                android:textColor="#FFF" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
