<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppTheme"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#8bc34a">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >
        <TextView
            android:text="Novo jogo"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginBottom="20dp" />

        <!-- Data -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_jogo_data"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/edtDataJogo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:inputType="datetime"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />

        <!-- Posicoes -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_jogo_posicoes_disponiveis"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.thomashaertel.widget.MultiSpinner
            android:id="@+id/spnPosicoesDisponiveis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Endereço -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_team_endereco"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/edtEnderecoJogo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:inputType="text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />

        <!-- Cidade -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_team_cidade"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/edtCidadeJogo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:inputType="text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />

        <!-- Estado -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_team_estado"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/edtEstadoJogo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:inputType="text"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#2baf2b">

        <Button
            android:id="@+id/btnCadastrarTime"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_jogo_btn_salvar"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:background="#0a8f08"
            android:onClick="salvar"/>

    </RelativeLayout>

</RelativeLayout>