<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#8bc34a">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:paddingBottom="20dp">
            <TextView
                android:text="@string/lbl_player_title"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="26sp"
                android:layout_marginBottom="20dp" />

            <!-- Nome -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_team_nome"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtNomeJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!-- Telefone -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_telefone_jogador"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtTelefoneJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="phone"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!-- Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_e_mail_jogador"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtEmailJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!-- Senha -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_senha_jogador"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtSenhaJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!-- Tipo de jogo -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_team_tipo_de_jogo"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <Spinner
                android:id="@+id/spnTipoJogo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp" />

            <!-- Posicao -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_player_posicao"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <Spinner
                android:id="@+id/spnPosicao"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp" />

            <!-- Endereço -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_team_endereco"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtEnderecoJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!-- Cidade -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_team_cidade"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtCidadeJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />

            <!-- Estado -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_team_estado"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/edtEstadoJogador"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#2baf2b">
        <Button
            android:id="@+id/btnCadastrarTime"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Entrar"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:background="#0a8f08"
            android:onClick="registrar"/>
    </RelativeLayout>

</RelativeLayout>